--- a/university-website/index.html
+++ b/university-website/index.html
@@ -129,6 +129,50 @@
         </div>
     </section>
 
+    <!-- testimonials -->
+    <section class="testimonial">
+        <h1>What Our Student Says</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit accusamus, ab, quasi facilis accusantium
+            sint temporibus ullam aut quae sapiente omnis in, expedita magni! Commodi esse magni distinctio nemo quos.
+        </p>
+        <div class="row">
+            <div class="testimonial-col">
+                <img src="image/user1.jpg" alt="student1">
+                <div class="testimonial-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, soluta quos? In, illum velit
+                        explicabo soluta, asperiores magni dolores ex eius doloribus nihil minima reprehenderit illo
+                        unde quaerat expedita ea.</p>
+                    <h3>Christine Berkley</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+            </div>
+            <div class="testimonial-col">
+                <img src="image/user2.jpg" alt="student2">
+                <div class="testimonial-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, soluta quos? In, illum velit
+                        explicabo soluta, asperiores magni dolores ex eius doloribus nihil minima reprehenderit illo
+                        unde quaerat expedita ea.</p>
+                    <h3>David Byer</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- contact -->
+    <section class="contact">
+        <div class="contact-content">
+            <h1>Enroll for our various online courses Anywhere from The World</h1>
+            <div class="btn">CONTACT US</div>
+        </div>
+    </section>
     <script>
         function openNav() {
             let navLists = document.getElementById('navLists');
