--- a/portfolio-page/index.html
+++ b/portfolio-page/index.html
@@ -10,10 +10,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8f8063437e.js" crossorigin="anonymous"></script>
     <title>My Website</title>
 </head>
 
 <body>
+
+    <!-- Navbar Section -->
+    <section id="nav" class="nav">
+        <div class="navBar">
+            <div class="nav-logo brand">
+                <a href="#hero">
+                    <h1><span>J</span>UNG-IN <span>C</span>HA</h1>
+                </a>
+            </div>
+            <div class="nav-list">
+                <div class="hamburger">
+                    <div class="bar"></div>
+                </div>
+                <ul>
+                    <li><a href="#hero" data-after="Home">home</a></li>
+                    <li><a href="#services" data-after="Services">services</a></li>
+                    <li><a href="#projects" data-after="Projects">projects</a></li>
+                    <li><a href="#about" data-after="About">about</a></li>
+                    <li><a href="#contact" data-after="Contact">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- End Navbar Section -->
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero container">
@@ -77,6 +102,168 @@
         </div>
     </section>
     <!-- End Service Section -->
+
+    <!-- Project Section -->
+    <section id="projects">
+        <div class="projects container">
+            <div class="projects-header">
+                <h1 class="section-title">Recent <span>Projects</span></h1>
+            </div>
+            <div class="all-projects">
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 1</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id amet architecto cum asperiores
+                            recusandae, ducimus veniam consequatur, facere neque, dolor vitae omnis aliquam quidem!
+                            Accusamus atque minus voluptatem quia facilis.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 2</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id amet architecto cum asperiores
+                            recusandae, ducimus veniam consequatur, facere neque, dolor vitae omnis aliquam quidem!
+                            Accusamus atque minus voluptatem quia facilis.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 3</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id amet architecto cum asperiores
+                            recusandae, ducimus veniam consequatur, facere neque, dolor vitae omnis aliquam quidem!
+                            Accusamus atque minus voluptatem quia facilis.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 4</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id amet architecto cum asperiores
+                            recusandae, ducimus veniam consequatur, facere neque, dolor vitae omnis aliquam quidem!
+                            Accusamus atque minus voluptatem quia facilis.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/img-1.png" alt="img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Project Section -->
+
+    <!-- About Section -->
+    <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./img/img-2.png" alt="img">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>Me</span></h1>
+                <h2>Front End Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore perspiciatis aspernatur consectetur
+                    adipisci maiores quis inventore architecto corrupti nihil quidem optio, non voluptate reiciendis
+                    dolore eum eveniet? Expedita, voluptas itaque.</p>
+                <a class="cta" href="#">Download Resume</a>
+            </div>
+        </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="contact container">
+            <div>
+                <h1 class="section-title">Contact <span>Info</span></h1>
+            </div>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/50/000000/phone--v1.png" /></div>
+                    <div class="contact-info">
+                        <h1>Phone</h1>
+                        <h2>+1 234 123 1234</h2>
+                        <h2>+1 234 123 1234</h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/50/000000/apple-mail.png" /></div>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <h2>info@gmail.com</h2>
+                        <h2>info@gmail.com</h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/50/000000/address.png" /></div>
+                    <div class="contact-info">
+                        <h1>Address</h1>
+                        <h2>Brisbane, Australia</h2>
+                        <h2>+Brisbane, Australia</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact Section -->
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="footer container">
+            <div class="brand">
+                <h1><span>J</span>ung-In <span>C</span>ha</h1>
+            </div>
+            <h2>Your Complete Web Solution</h2>
+            <div class="social-icon">
+                <div class="social-item">
+                    <a href="#"><i class="fa-brands fa-facebook fa-3x"></i></a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><i class="fa-brands fa-square-instagram fa-3x"></i></a>
+                </div>
+                <div class="social-item">
+                    <a href="#"><i class="fa-brands fa-github fa-3x"></i></a>
+                </div>
+            </div>
+            <p>Copyright 2022 Jung-In. All rights reserved</p>
+        </div>
+    </footer>
+    <!-- End Footer -->
+
+    <!-- Javscript -->
+    <script>
+        const hamburger = document.querySelector('.nav .navBar .nav-list .hamburger');
+        const mobile_menu = document.querySelector('.nav .navBar .nav-list ul');
+        const header = document.querySelector('.nav');
+
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            mobile_menu.classList.toggle('active');
+        });
+
+        document.addEventListener('scroll', () => {
+            let scroll_position = window.scrollY;
+            if (scroll_position > 200) {
+                header.style.backgroundColor = '#29323c';
+            } else {
+                header.style.backgroundColor = 'transparent'
+            }
+        })
+    </script>
+    <!-- End Javascript -->
+
 </body>
 
 </html>
